<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">
  <data>
    <variable
      name="synchronizationViewModel"
      type="com.sashnikov.android.calltracker.viewmodel.SynchronizationViewModel"/>
  </data>
  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.activity.synchronization.SynchronizationActivityFragment"
    tools:showIn="@layout/activity_synchronization">

    <Button
      android:id="@+id/btn_synchronization"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:text="@string/synchronize_button_text"
      android:visibility="visible"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"/>
    <TextView
      android:id="@+id/synchronization_status_text"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:ems="10"
      android:hint="@string/synchronization_status_text_hint"
      android:textAlignment="center"
      android:textSize="18sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/btn_synchronization"/>
    <TextView
      android:id="@+id/synchronization_last_update_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/synchronization_last_update_label_text"
      android:textSize="18sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/synchronization_status_text"/>
    <TextView
      android:id="@+id/last_synchronization_date_value"
      android:textStyle="bold"
      android:layout_width="411dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@{synchronizationViewModel.lastUpdatedLiveData}"
      android:textAlignment="center"
      android:textSize="18sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/synchronization_last_update_label"/>
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>