<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">
  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.activity.MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
      android:id="@+id/btn_random_age"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:layout_marginStart="24dp"
      android:text="Change age"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/age_label"/>
    <Button
      android:id="@+id/get_by_id_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:layout_marginStart="24dp"
      android:text="@string/btn_get_user_text"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/user_id_hint"/>
    <EditText
      android:id="@+id/id_value"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginEnd="24dp"
      android:ems="10"
      android:inputType="number"
      android:text="@{`` + userViewModel.userId}"
      app:layout_constraintBaseline_toBaselineOf="@+id/user_id_hint"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/user_id_hint"/>
    <TextView
      android:id="@+id/age_text"
      android:layout_width="302dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginEnd="24dp"
      android:text="@{userViewModel.user.age.toString()}"
      app:layout_constraintBaseline_toBaselineOf="@+id/age_label"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/age_label"/>
    <TextView
      android:id="@+id/age_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:layout_marginStart="24dp"
      android:text="@string/age_label"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/name_label"/>
    <TextView
      android:id="@+id/user_id_hint"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:layout_marginStart="24dp"
      android:text="@string/id_label_text"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/btn_random_age"/>
    <TextView
      android:id="@+id/name_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:layout_marginStart="24dp"
      android:text="@string/name_label"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"/>
    <TextView
      android:id="@+id/name_text"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginEnd="24dp"
      android:text="@{userViewModel.user.name}"
      app:layout_constraintBaseline_toBaselineOf="@+id/name_label"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/name_label"/>
    <TextView
      android:id="@+id/progress_text"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginEnd="24dp"
      app:layout_constraintBaseline_toBaselineOf="@+id/btn_random_age"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/btn_random_age"/>

  </androidx.constraintlayout.widget.ConstraintLayout>
  <data>
    <variable
      name="userViewModel"
      type="com.sashnikov.android.calltracker.viewmodel.UserViewModel"/>
  </data>
</layout>
